--- a/index.html
+++ b/index.html
@@ -8,6 +8,43 @@
     <title>Paint</title>
   </head>
   <body>
+    <canvas id="jsCanvas" class="canvas"></canvas>
+    <div class="controls">
+      <div class="controls__range">
+        <input
+          type="range"
+          id="jsRange"
+          min="0.1"
+          max="10"
+          value="5"
+          step="0.1"
+          list="tick"
+        />
+        <datalist id="tick">
+          <option value="0.1"></option>
+          <option value="2.5"></option>
+          <option value="5"></option>
+          <option value="7.5"></option>
+          <option value="10"></option>
+        </datalist>
+      </div>
+      <div class="controls__btns">
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
+      </div>
+      <div class="controls__colors" id="jsColors">
+        <div class="controls__color" style="background-color: red;"></div>
+        <div class="controls__color" style="background-color: orange;"></div>
+        <div class="controls__color" style="background-color: yellow;"></div>
+        <div class="controls__color" style="background-color: green;"></div>
+        <div class="controls__color" style="background-color: blue;"></div>
+        <div class="controls__color" style="background-color: navy;"></div>
+        <div class="controls__color" style="background-color: purple;"></div>
+        <div class="controls__color" style="background-color: white;"></div>
+        <div class="controls__color" style="background-color: grey;"></div>
+        <div class="controls__color" style="background-color: black;"></div>
+      </div>
+    </div>
     <script src="app.js"></script>
   </body>
 </html>
